--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.14.0",
+    "jspdf": "^2.4.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuetify": "^2.5.4",
