--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.14.0",
-    "jspdf": "^2.4.0",
     "vue": "^2.6.11",
+    "vue-html2pdf": "^1.8.0",
     "vue-router": "^3.5.1",
     "vuetify": "^2.5.4",
     "vuex": "^3.6.2"
