--- a/backend/composer.json
+++ b/backend/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "milon/barcode": "^8.0",
         "nesbot/carbon": "^2.53",
         "spatie/laravel-permission": "^5.1",
         "tightenco/ziggy": "^1.0"
