--- a/backend/composer.json
+++ b/backend/composer.json
@@ -18,6 +18,7 @@
         "laravel/ui": "^3.3",
         "milon/barcode": "^8.0",
         "nesbot/carbon": "^2.53",
+        "orkhanahmadov/laravel-zip-validator": "^1.8",
         "spatie/laravel-permission": "^5.1",
         "tightenco/ziggy": "^1.0"
     },
