--- a/backend/composer.json
+++ b/backend/composer.json
@@ -5,29 +5,29 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
-        "doctrine/dbal": "^3.2",
-        "fideloper/proxy": "^4.4",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "inertiajs/inertia-laravel": "^0.3.5",
-        "laravel/framework": "^8.12",
+        "php": "8.0",
+        "doctrine/dbal": "3.3.0",
+        "fideloper/proxy": "4.4.1",
+        "fruitcake/laravel-cors": "2.0.5",
+        "guzzlehttp/guzzle": "7.4.1",
+        "inertiajs/inertia-laravel": "0.3.6",
+        "laravel/framework": "8.81.0",
         "laravel/jetstream": "2.1.4",
-        "laravel/sanctum": "^2.6",
-        "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.3",
-        "milon/barcode": "^8.0",
-        "nesbot/carbon": "^2.53",
-        "spatie/laravel-permission": "^5.1",
-        "tightenco/ziggy": "^1.0"
+        "laravel/sanctum": "2.14.0",
+        "laravel/tinker": "2.7.0",
+        "laravel/ui": "3.4.2",
+        "milon/barcode": "8.0.1",
+        "nesbot/carbon": "2.56.0",
+        "spatie/laravel-permission": "5.5.0",
+        "tightenco/ziggy": "1.4.2"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
-        "fakerphp/faker": "^1.9.1",
-        "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "facade/ignition": "2.17.4",
+        "fakerphp/faker": "1.18.0",
+        "laravel/sail": "1.13.1",
+        "mockery/mockery": "1.5.0",
+        "nunomaduro/collision": "5.11.0",
+        "phpunit/phpunit": "9.5.13"
     },
     "autoload": {
         "psr-4": {
