--- a/backend/composer.json
+++ b/backend/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "8.0",
+        "php": "^7.3|^8.0",
         "doctrine/dbal": "3.3.0",
         "fideloper/proxy": "4.4.1",
         "fruitcake/laravel-cors": "2.0.5",
